--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,6 +9,7 @@ include(CMakeParseArguments)
 # building on Linux under GCC right now, so we might as well just hard
 # code the flags.
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=gnu++14")
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -I/usr/include/libnl3")
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wno-sign-compare -Wno-bool-compare")
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wno-unused-variable -Woverloaded-virtual -Wnon-virtual-dtor")
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wno-maybe-uninitialized -Wdeprecated-declarations")
@@ -40,6 +41,9 @@ find_library(SSL ssl)
 find_library(CRYPTO crypto)
 find_library(DL dl)
 find_library(EVENT event)
+find_library(NETLINK3 nl-3)
+find_library(NETLINKROUTE3 nl-route-3)
+find_library(CURL curl)
 
 # External libraries that are not generally available. Look in external/
 # for these. This is where getdeps.sh will toss them.
@@ -73,6 +77,7 @@ add_library(fboss_agent STATIC
     fboss/agent/ApplyThriftConfig.cpp
     fboss/agent/ArpCache.cpp
     fboss/agent/ArpHandler.cpp
+    fboss/agent/BmcRestClient.cpp
     fboss/agent/capture/PcapFile.cpp
     fboss/agent/capture/PcapPkt.cpp
     fboss/agent/capture/PcapQueue.cpp
@@ -152,19 +157,26 @@ add_library(fboss_agent STATIC
     fboss/agent/packet/PktUtil.cpp
     fboss/agent/Platform.cpp
     fboss/agent/platforms/wedge/oss/WedgePlatform.cpp
+    fboss/agent/platforms/wedge/oss/Wedge40Platform.cpp
     fboss/agent/platforms/wedge/oss/Wedge100Platform.cpp
     fboss/agent/platforms/wedge/oss/WedgePort.cpp
+    fboss/agent/platforms/wedge/oss/Wedge40Port.cpp
+    fboss/agent/platforms/wedge/oss/Wedge100Port.cpp
     fboss/agent/platforms/wedge/oss/WedgeProductInfo.cpp
     fboss/agent/platforms/wedge/wedge_ctrl.cpp
     fboss/agent/platforms/wedge/WedgeI2CBusLock.cpp
     fboss/agent/platforms/wedge/WedgePlatform.cpp
+    fboss/agent/platforms/wedge/Wedge40Platform.cpp
     fboss/agent/platforms/wedge/Wedge100Platform.cpp
     fboss/agent/platforms/wedge/WedgePort.cpp
     fboss/agent/platforms/wedge/WedgeProductInfo.cpp
     fboss/agent/platforms/wedge/WedgeQsfp.cpp
     fboss/agent/PortStats.cpp
+    fboss/agent/PortRemediator.cpp
     fboss/agent/QsfpModule.cpp
     fboss/agent/RestClient.cpp
+    fboss/agent/RouteUpdateLogger.cpp
+    fboss/agent/RouteUpdateLoggingPrefixTracker.cpp
     fboss/agent/SffFieldInfo.cpp
     fboss/agent/SfpModule.cpp
     fboss/agent/state/AclEntry.cpp
@@ -201,6 +213,7 @@ add_library(fboss_agent STATIC
     fboss/agent/TunIntf.cpp
     fboss/agent/TunManager.cpp
     fboss/agent/UDPHeader.cpp
+    fboss/agent/UnresolvedNhopsProber.cpp
     fboss/agent/Utils.cpp
 
     fboss/lib/usb/BaseWedgeI2CBus.cpp
@@ -268,6 +281,9 @@ target_link_libraries(fboss_agent
     ${DOUBLECONV}
     ${DL}
     ${EVENT}
+    ${NETLINK3}
+    ${NETLINKROUTE3}
+    ${CURL}
 )
 
 find_program(THRIFT1 thrift1)
